featI49: Implementation of the JavaDoc to the MercadoPagoController

--- a/src/main/resources/templates/email/payment-approved.html
+++ b/src/main/resources/templates/email/payment-approved.html
@@ -29,7 +29,7 @@
   </table>
 
   <p style="font-weight: bold; margin-top: 20px; font-size: 1.1em;">
-    Total: 'R$ ' <span th:text="${total} + "></span>
+    Total: <span th:text="'R$ ' + ${total}"></span>
   </p>
 
   <p style="margin-top: 30px;">Agradecemos por comprar conosco!</p>
